--- a/desafio03/index.html
+++ b/desafio03/index.html
@@ -12,7 +12,7 @@
         <h1>Conversor de Moedas v1.0</h1>
         <form action="resultado.php" method="get">
             <label for="Numero">Quantos R$ vc tem?</label>
-            <input type="number" name="Numero" id="idnumero">
+            <input type="number" name="Numero" id="idnumero" step="0.01">
             <input type="submit" value="Converter">
         </form>
     </section>
